# FYP-Stock-Data-Analyser

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  Shortcut.sh
data/: MSFT_HistoricalData_1772679192963.csv
data_csv/: LOG4Shell-AAPL-04012022.csv  LOG4Shell-AAPL-09122021.csv  LOG4Shell-AMD-09122021.csv  LOG4Shell-AMZN-04012022.csv  LOG4Shell-AMZN-09122021.csv  LOG4Shell-GOOG-09122021.csv  LOG4Shell-MSFT-09122021.csv  LOG4Shell-MSFT.csv  LOG4Shell-SPY.csv  LOG4Shell-TSLA-09122021.csv
include/: ArduinoJson-v7.4.3.hpp  analysis.hpp  parser.hpp  plotter.hpp  stock.hpp  stock.hpp~
src/: analysis.cpp  main.cpp  main.cpp~  parser.cpp  plotter.cpp  stock.cpp
